<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGrey"
    tools:context="com.example.calculator.MainActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textSize="12pt"
        android:id="@+id/tvResult"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ems="10"
        android:background="@color/colorBack"
        android:inputType="numberDecimal"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        
        <Button
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorYellow"
            android:text="@string/n7"
            android:textSize="50dp"
            android:id="@+id/n7"
             />
        <Button
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorYellow"
            android:text="@string/n8"
            android:textSize="50dp"
            android:id="@+id/n8"
            />
        <Button
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorYellow"
            android:text="@string/n9"
            android:textSize="50dp"
            android:id="@+id/n9"
            />
        <Button
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorYellow"
            android:text="@string/div"
            android:textSize="50dp"
            android:id="@+id/div"
           />

        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorYellow"
            android:text="@string/n4"
            android:textSize="50dp"
            android:id="@+id/n4"
            />
        <Button
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorYellow"
            android:text="@string/n5"
            android:textSize="50dp"
            android:id="@+id/n5"
            />
        <Button
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorYellow"
            android:text="@string/n6"
            android:textSize="50dp"
            android:id="@+id/n6"
            />
        <Button
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorYellow"
            android:text="@string/mult"
            android:textSize="50dp"
            android:id="@+id/mult"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorYellow"
            android:text="@string/n3"
            android:textSize="50dp"
            android:id="@+id/n3"
            />
        <Button
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorYellow"
            android:text="@string/n2"
            android:textSize="50dp"
            android:id="@+id/n2"
            />
        <Button
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorYellow"
            android:text="@string/n1"
            android:textSize="50dp"
            android:id="@+id/n1"
            />
        <Button
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorYellow"
            android:text="@string/min"
            android:textSize="50dp"
            android:id="@+id/sub"

            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorYellow"
            android:text="@string/n0"
            android:textSize="50dp"
            android:id="@+id/n0"            />
        <Button
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorYellow"
            android:text="@string/dot"
            android:textSize="50dp"
            android:id="@+id/dot"
            />
        <Button
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorYellow"
            android:text="@string/add"
            android:textSize="50dp"
            android:id="@+id/add"

            />
        <Button
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorOrange"
            android:text="@string/equal"
            android:textSize="50dp"
            android:id="@+id/equal"
            />


    </LinearLayout>

</LinearLayout>
